# oral-diseases

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
oral/: labels.py
src/: main_page.py
src/pages/: about_page.py
website/: Home.py  Home_Page.py  app.py  main_page.py  report.py
website/assets/: caries.md  gingivitis.md  tooth_discoloration.md  ulcer.md
website/pages/: 01-User_Guide.py  02-Upload_Photo.py  03-Information.py  04-About_Us.py  about_page.py  caries_report_page.py  guide_page.py  report_page.py  upload_page.py
website/site/: 00-Home.py  01-User_Guide.py  02-Upload_Photo.py  03-Ask_Orally.py  03-Information.py  04-About_Us.py  04-Information.py  04-Nearby_Hospital.py  05-Multi-file_Processing.py  05-Upload_Batch.py  06-Infographic.py  07-Poster.py  08-About_Us.py
